Change to pykafka

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,21 @@
-version: "3"
+version: "2"
 services:
   zookeeper:
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
   kafka:
-    image: wurstmeister/kafka:latest
+    image: wurstmeister/kafka:1.0.0
     ports:
       - "9092:9092"
     depends_on:
       - zookeeper
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - KAFKA_ADVERTISED_PORT=9092
-      - KAFKA_BROKER_ID=1
-      - KAFKA_ZOOKEEPER_CONNECT=127.0.0.1
-      - KAFKA_ADVERTISED_HOST_NAME=127.0.0.1
-      - ZOOKEEPER_CONNECTION_TIMEOUT_MS=180000
-      - KAFKA_CREATE_TOPICS=ethereum_account:1:1,ethereum_tx:1:1,ethereum_block:1:1
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ADVERTISED_HOST_NAME: 172.19.0.3
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      ZOOKEEPER_CONNECTION_TIMEOUT_MS: 180000
+      KAFKA_CREATE_TOPICS: "ethereum_account:1:1,ethereum_tx:1:1,ethereum_block:1:1"
